# react-native-text-size

./: App.tsx  TextSizeExample.tsx  package.json  tsconfig.build.json
harmony/: text_size.har
harmony/text_size/: build-profile.json5  oh-package.json5  ts.ts
harmony/text_size/src/main/: module.json5
harmony/text_size/src/main/cpp/: CMakeLists.txt  RNTextSizePackage.h  RNTextSizeTurboModule.cpp  RNTextSizeTurboModule.h
harmony/text_size/src/main/ets/: Config.ts  Logger.ets  RNTextSizePackage.ts  RNTextSizeTurboModule.ts
harmony/text_size/src/main/resources/en_US/element/: string.json
harmony/text_size/src/main/resources/zh_CN/element/: string.json
src/: NativeTextSize.tsx  index.ts
